# auto-questionnaire

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  omniParser.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DEVELOPMENT.md
scripts/: fix_imports.py
src/auto_questionnaire/: main.py
src/auto_questionnaire/ai/: groq_handler.py  prompt_builder.py
src/auto_questionnaire/config/: alert_config.json  logging_config.json  model_config.py
src/auto_questionnaire/monitoring/: alert_manager.py  metrics_visualizer.py
src/auto_questionnaire/parser/: element_finder.py  ui_parser.py
src/auto_questionnaire/utils/: answer_evaluator.py  answer_validator.py  auto_fill.py  cache_manager.py  log_config.py  performance_monitor.py  request_queue.py  screenshot.py
tests/: __init__.py  conftest.py
tests/integration/: test_edge_cases.py  test_enhanced_flow.py  test_integration.py  test_integration_flow.py  test_integration_scenarios.py
tests/performance/: test_concurrent.py  test_performance.py  test_performance_monitor.py  test_stress.py
tests/test_environment/: test_setup.py
tests/unit/: test_answer_evaluator.py  test_answer_validator.py  test_batch_processing.py  test_cache.py  test_cache_manager.py  test_import_features.py  test_metrics_visualizer.py  test_model_config.py  test_prompt_builder.py  test_request_queue.py  test_verify_settings.py  test_vscode_import.py
